--- a/dada/extras/documentation/pod_source/FAQ-email_sending.pod
+++ b/dada/extras/documentation/pod_source/FAQ-email_sending.pod
@@ -114,7 +114,7 @@ Again, you'll probably want to use the B<list owner's email address>'s username/
 
 =head2 Testing Your SMTP Sending
 
-In the B<Manage List:  Mail Sending: Sending Preferences list control panel, you should see  a button labeled, B<Save, Then Test Your Sending Preferences...>. Clicking this button will both Save your SMTP settings and test the settings to see if they work. 
+In the B<Manage List:  Mail Sending: Sending Preferences> list control panel, you should see  a button labeled, B<Save, Then Test Your Sending Preferences...>. Clicking this button will both Save your SMTP settings and test the settings to see if they work. 
 
 Testing basically involves connecting to the SMTP server and attempting to send a message out. 
 
@@ -210,7 +210,7 @@ Depending on how your Sending Preferences are setup, you need to do different tw
 
 =item * Setting up the Return-Path when sending via SMTP
 
-In B<Mail Settings - Sending Preferences  check, 
+In B<Mail Settings - Sending Preferences>  check, 
 
 I<Set the Sender of SMTP mailings to the list administration email address >
 
